--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@
 NAVER_CLIENT_ID=zeznbmt6EzDhkPMeOwYK
 NAVER_CLIENT_SECRET=nf2kl7itvg
 
+# 딥서치 뉴스 API 설정
+DEEPSEARCH_API_KEY=de748adda69949c988dd860159a0ebde
+
 # 서버 설정
 HOST=0.0.0.0
 PORT=8000
