--- a/env.example
+++ b/env.example
@@ -1,9 +1,9 @@
 # 네이버 API 설정
-NAVER_CLIENT_ID=zeznbmt6EzDhkPMeOwYK
-NAVER_CLIENT_SECRET=nf2kl7itvg
+NAVER_CLIENT_ID=
+NAVER_CLIENT_SECRET=
 
 # 딥서치 뉴스 API 설정
-DEEPSEARCH_API_KEY=de748adda69949c988dd860159a0ebde
+DEEPSEARCH_API_KEY=
 
 # 서버 설정
 HOST=0.0.0.0
